--- a/Questions/Uploader/upload-questoes.html
+++ b/Questions/Uploader/upload-questoes.html
@@ -1059,9 +1059,6 @@
           q.skillType  = skillSel;
           q.difficulty = diffSel;
 
-          // order vai ser definido conforme posição FINAL na activity (após inserir)
-          // (definimos depois, quando montarmos finalIds)
-
           updates["questions/" + newId] = q;
         }
 
@@ -1069,12 +1066,16 @@
         const finalIds = existingIds.slice();
         finalIds.splice(insertAt, 0, ...newIds);
 
-        // agora que temos a ordem final, ajusta q.order dos novos
+        // agora que temos a ordem final, ajusta q.order dos novos (DENTRO do objeto),
+        // sem criar paths filhos no mesmo update (evita conflito de ancestor path)
         for (let i = 0; i < newIds.length; i++){
           const id = newIds[i];
           const pos = finalIds.indexOf(id);
           if (pos >= 0){
-            updates["questions/" + id + "/order"] = pos + 1;
+            const key = "questions/" + id;
+            if (updates[key] && typeof updates[key] === "object"){
+              updates[key].order = pos + 1;
+            }
           }
         }
 
