--- a/Atividades/Perguntas Starter/index - Copy.html
+++ b/Atividades/Perguntas Starter/index - Copy.html
@@ -80,75 +80,12 @@
   }
 
   .q-top{display:flex;flex-direction:column;gap:14px}
-
-  /* Linha com prompt + ícone de áudio do prompt */
-  .q-prompt-row{
-    display:flex;
-    align-items:flex-start;
-    gap:8px;
-  }
-
-  .q-prompt{
-    font-size:22px;font-weight:800;line-height:1.3;word-break:break-word;
-    flex:1 1 auto;
-  }
-
-  /* Ícone de áudio do PROMPT (sempre lê o prompt) */
-  .prompt-audio-btn{
-    flex:0 0 auto;
-    border:none;
-    background:transparent;
-    cursor:pointer;
-    font-size:22px;
-    line-height:1;
-    padding:6px;
-    border-radius:999px;
-    display:inline-flex;
-    align-items:center;
-    justify-content:center;
-    transition:background .15s ease, transform .1s ease, opacity .15s ease;
-    opacity:0.85;
-  }
-  .prompt-audio-btn:hover{
-    background:rgba(37,99,235,.08);
-    opacity:1;
-  }
-  .prompt-audio-btn:active{
-    transform:scale(.92);
-  }
-
+  .q-prompt{font-size:22px;font-weight:800;line-height:1.3;word-break:break-word}
   .q-media{width:100%;aspect-ratio:16/10;background:#eef4ff;border:1px dashed #cfe0ff;border-radius:14px;padding:8px;overflow:hidden;display:block}
   .q-media img{width:100%;height:100%;object-fit:contain;display:block}
   @supports not (aspect-ratio:16/10){.q-media{height:220px}}
 
   .q-controls{display:flex;gap:8px;align-items:center;margin-top:8px;flex-wrap:wrap}
-
-  /* Botão LISTEN especial para audio_mcq (resposta) */
-  .listen-audio-btn{
-    border:none;
-    display:inline-flex;
-    align-items:center;
-    justify-content:center;
-    gap:10px;
-    padding:12px 20px;
-    border-radius:999px;
-    background:linear-gradient(90deg,#3b82f6,#22c55e);
-    color:#fff;
-    font-weight:900;
-    font-size:16px;
-    cursor:pointer;
-    box-shadow:0 10px 18px rgba(34,197,94,.35);
-  }
-  .listen-audio-btn .listen-icon{
-    font-size:22px;
-  }
-  .listen-audio-btn .listen-label{
-    letter-spacing:.08em;
-  }
-  .listen-audio-btn:active{
-    transform:translateY(1px);
-  }
-
   .icon-btn{border:none;background:#e6f0ff;color:#0f3ea8;padding:10px 12px;border-radius:12px;cursor:pointer;font-weight:700}
   .icon-btn:active{transform:translateY(1px)}
 
@@ -285,34 +222,12 @@
       <div class="question-card">
         <div class="q-top">
           <div>
-            <!-- Prompt + ícone de áudio do prompt -->
-            <div class="q-prompt-row">
-              <div class="q-prompt" id="prompt">—</div>
-              <button
-                class="prompt-audio-btn"
-                id="btnPlayPrompt"
-                type="button"
-                title="Listen to question"
-                aria-label="Listen to the question"
-              >
-                🔊
-              </button>
-            </div>
-
-            <!-- Botão LISTEN especial (apenas para audio_mcq) -->
+            <div class="q-prompt" id="prompt">—</div>
             <div class="q-controls">
-              <button
-                class="listen-audio-btn is-hidden"
-                id="btnListenAnswer"
-                type="button"
-                title="Listen to the answer"
-              >
-                <span class="listen-icon">🎧</span>
-                <span class="listen-label">LISTEN</span>
-              </button>
+              <button class="icon-btn" id="btnPlayPrompt" title="Listen to question">🔊 Listen</button>
+              <button class="icon-btn" id="btnRepeat" title="Repeat aloud (optional)">🎤 Repeat</button>
             </div>
           </div>
-
           <div class="q-media" id="mediaBox" aria-label="Question image"></div>
         </div>
 
@@ -476,7 +391,7 @@ firebase.auth().onAuthStateChanged(function(user){
   const mediaBox   = document.getElementById('mediaBox');
   const optionsEl  = document.getElementById('options');
   const btnPlayPrompt = document.getElementById('btnPlayPrompt');
-  const btnListenAnswer = document.getElementById('btnListenAnswer');
+  const btnRepeat  = document.getElementById('btnRepeat');
   const btnNext    = document.getElementById('btnNext');
   const statusPill = document.getElementById('statusPill');
   const confettiEl = document.getElementById('confetti');
@@ -707,51 +622,13 @@ firebase.auth().onAuthStateChanged(function(user){
   function speakFriendly(pool){ const pick = pool[(Math.random()*pool.length)|0]; speak(pick); }
 
   /* =========================
-     Audio da RESPOSTA (apenas audio_mcq)
-  ========================= */
-  function playAnswerAudio(q){
-    stopAllAudio();
-
-    if (!q || !Array.isArray(q.options)) {
-      return;
-    }
-
-    const correctOpt = q.options.find(opt => normalize(opt.value) === normalize(q.answer));
-    if (!correctOpt){
-      const fallback = (q.options[0] && (q.options[0].tts || q.options[0].label || q.options[0].value)) || '';
-      if (fallback) speak(fallback);
-      return;
-    }
-
-    const phrase = (correctOpt.tts || correctOpt.label || correctOpt.value || '').toString().trim();
-
-    if (correctOpt.audio){
-      try{
-        const a = new Audio(absPath(correctOpt.audio));
-        currentAudio = a;
-        a.onended = () => { currentAudio = null; };
-        a.onerror  = () => { currentAudio = null; if (phrase) speak(phrase); };
-        a.play().catch(() => { currentAudio = null; if (phrase) speak(phrase); });
-      }catch(e){
-        if (phrase) speak(phrase);
-      }
-    } else {
-      if (phrase) speak(phrase);
-    }
-  }
-
-  /* =========================
      Render current question
   ========================= */
   function renderQuestion(){
     answered = false;
     btnNext.disabled = true; btnNext.classList.remove('ready');
-    btnPlayPrompt.disabled = false;
-
-    // reset botão de ouvir RESPOSTA (audio_mcq)
-    btnListenAnswer.classList.add('is-hidden');
-    btnListenAnswer.disabled = true;
-    btnListenAnswer.onclick = null;
+    btnPlayPrompt.disabled = false; btnRepeat.disabled = false;
+    btnPlayPrompt.classList.remove('is-hidden'); btnRepeat.classList.remove('is-hidden');
 
     const q = questions[idx];
     if(!q){ finish(); return; }
@@ -769,18 +646,8 @@ firebase.auth().onAuthStateChanged(function(user){
       promptEl.appendChild(span);
     }
 
-    // Ícone de áudio do PROMPT: sempre lê o prompt (via promptAudio ou TTS)
     btnPlayPrompt.onclick = () => { if (!isReading) playPrompt(q); };
-
-    // Se for audio_mcq, mostrar botão LISTEN que lê a RESPOSTA
-    if (q.type === 'audio_mcq'){
-      btnListenAnswer.classList.remove('is-hidden');
-      btnListenAnswer.disabled = false;
-      btnListenAnswer.onclick = () => {
-        if (isReading) return;
-        playAnswerAudio(q);
-      };
-    }
+    btnRepeat.onclick     = () => { if (isReading) return; stopAllAudio(); speak(buildSpokenPrompt(q)); };
 
     mediaBox.innerHTML = '';
     if(q.image){
@@ -1179,10 +1046,8 @@ firebase.auth().onAuthStateChanged(function(user){
     confetti(30);
     speakFriendly(['Great! You finished!','Amazing work!']);
 
-    // Desabilita o ícone de áudio do prompt e esconde o LISTEN de resposta
-    btnPlayPrompt.disabled = true;
-    btnListenAnswer.classList.add('is-hidden');
-    btnListenAnswer.disabled = true;
+    btnPlayPrompt.disabled = true; btnRepeat.disabled = true;
+    btnPlayPrompt.classList.add('is-hidden'); btnRepeat.classList.add('is-hidden');
 
     onActivityComplete();
   }
