--- a/Atividades/Perguntas Starter/review.html
+++ b/Atividades/Perguntas Starter/review.html
@@ -1655,9 +1655,9 @@ function logAnswer(question, isCorrect){
     statusPill.textContent = "Review round completed";
 
     const msg =
-      `Good job! You still have a few points to improve.\n` +
-      `Let's keep going.\n\n` +
-      `Remaining difficult questions: ${remainingCount}`;
+  `Good job!\n` +
+  `You are getting better.\n\n` +
+  `Questions that still need review: ${remainingCount}`;
 
     promptEl.textContent = msg;
 
